<resources>
    <string name="app_name">Trunning</string>

    <string name="key_google_maps">YOUR GOOGLE MAPS KEY SHOULD BE HERE IF APK IS TO WORK</string>

    <string name="button_activity_settings">Settings</string>


    <!-- Template texts -->

    <string name="template_training_title">Bieganie z Mareczkiem</string>
    <string name="template_training_date">12 mar 19:30</string>
    <string name="template_training_location">Kraków</string>
    <string name="template_training_stats">12 min * 10 km</string>

    <string name="title_activity_settings">Settings</string>


    <string name="import_export_header">Import/export your maps</string>
    <string name="import_summary">Import your tracks from file</string>
    <string name="import_title">Import</string>
    <string name="export_summary">Export your tracks tos file</string>
    <string name="export_title">Export</string>

    <string name="libraries_header">Libraries</string>

    <string name="github_header">Repository</string>
    <string name="github_repository">Trunning repository</string>
    <string name="github_repository_title">View code on Github</string>

    <string name="github_repository_contributors">Contributors</string>
    <string name="github_repository_title_wegrzyn">piotrjwegrzyn</string>
    <string name="github_repository_wegrzyn">View piotrjwegrzyn on Github</string>
    <string name="github_repository_kwak">View Sirmarianus on Github</string>
    <string name="github_repository_title_kwak">Sirmarianus</string>

    <string name="title_activity_maps">Map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="speed">Speed</string>
    <string name="accuracy">Accuracy</string>
    <string name="new_track">New track</string>
    <string name="stop_activity">Stop activity</string>
    <string name="open_on_maps">Show on maps</string>
    <string name="distance">Distance</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="datee">Date</string>
    <string name="title_review_activity">Review of track</string>
    <string name="title_new_activity">New activity</string>

</resources>