<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.ReviewActivity">

    <TextView
        android:id="@+id/tv_trackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_track"
        android:textSize="48sp"
        android:textAlignment="center"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:paddingTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/distance"
                android:gravity="center"
                android:textAllCaps="true"
                android:textAlignment="viewStart"
                android:textSize="30sp"
                android:paddingLeft="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/datee"
                android:gravity="center"
                android:textAllCaps="true"
                android:textAlignment="viewStart"
                android:textSize="30sp"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/time"
                android:gravity="center"
                android:textAllCaps="true"
                android:textAlignment="viewStart"
                android:textSize="30sp"
                android:paddingLeft="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/location"
                android:gravity="center"
                android:textAllCaps="true"
                android:textAlignment="viewStart"
                android:textSize="30sp"
                android:paddingLeft="10dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:text="5 km"
                android:gravity="center"
                android:textSize="64sp"
                android:textAlignment="center"  />


            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:text="25/05/2021"
                android:gravity="center"
                android:textSize="36sp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:text="15 min"
                android:gravity="center"
                android:textSize="36sp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:text="Kraków"
                android:gravity="center"
                android:textSize="36sp"
                android:textAlignment="center" />


        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/design_default_color_primary"
        app:tint="@android:color/white"
        android:gravity="center"
        android:textColor="@color/white"
        android:contentDescription="@string/open_on_maps"
        android:text="@string/open_on_maps"/>

</androidx.constraintlayout.widget.ConstraintLayout>