<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".gui.ActivityActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_trackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="New track"
        android:inputType="textPersonName"
        android:text="@string/new_track"
        android:textAlignment="center"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="100dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/speed"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/accuracy"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/latitude"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/longitude"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Speed"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="64sp"
                tools:text="Speed" />


            <TextView
                android:id="@+id/tv_Accuracy"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="36sp"
                tools:text="Accuracy" />

            <TextView
                android:id="@+id/tv_Lat"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="36sp"
                tools:text="Latitude" />

            <TextView
                android:id="@+id/tv_Long"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="36sp"
                tools:text="Longitude" />


        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/red"
        app:tint="@android:color/white"
        android:src="@drawable/ic_baseline_cancel_24"
        android:contentDescription="@string/stop_activity" />
  
</androidx.constraintlayout.widget.ConstraintLayout>